# HarnessLab

./: .gitignore  Cargo.toml  README.md  _config.yml  coverage-critical.toml  npm_publish.sh  package.json  pyproject.toml  run_dev.sh  rust-toolchain.coverage.toml  tools.versions.toml
coe/: 2026-06-11-23-03-adapt-runtime-005-hang.md  2026-06-23-00-55-pages-jekyll-liquid-failure.md  2026-07-14-22-24-dev-daemon-process-exit.md  2026-07-16-06-23-agent-list-schema-skew.md  2026-07-17-02-24-job-resume-no-feedback.md  2026-07-18-dataset-download-status-lost.md  2026-07-18-dataset-task-pagination-performance.md  2026-07-18-swebenchpro-image-platform-missing.md  (+7 more)
crates/harnesslab-adapters/: Cargo.toml
crates/harnesslab-adapters/src/: data_boundary_contract.rs  data_boundary_rule_sets.rs  data_boundary_scan.rs  data_contract_tests.rs  fake_patch.rs  fake_terminal.rs  lib.rs  protocol_artifact_contract.rs  protocol_contract.rs  protocol_contract_builtins.rs  protocol_contract_tests.rs  protocol_registry.rs  registry.rs  scaffold_golden_adapter.rs  swe_bench_pro.rs  swe_bench_pro_artifacts.rs  swe_bench_pro_protocol.rs  swe_bench_pro_tests.rs  terminal_bench.rs  terminal_bench_protocol.rs  terminal_bench_tests.rs
crates/harnesslab-cli/: Cargo.toml
crates/harnesslab-cli/src/: app.rs  benchmark_data.rs  doctor.rs  doctor_capabilities.rs  doctor_run_as.rs  doctor_setup.rs  lib.rs  main.rs  output.rs  runner.rs  runner_tests.rs  runtime_compatibility.rs
crates/harnesslab-cli/src/agent_registry/: capability_catalog.rs  materializer.rs  mod.rs  templates.rs  version_probe.rs
crates/harnesslab-cli/src/runner/: attempts.rs  attempts_tests.rs  cleanup.rs  cleanup_tests.rs  external.rs  external_tests.rs  mode.rs  monitor.rs  monitor_tests.rs  patch.rs  redaction.rs  replay.rs  report_context.rs  run_output.rs  sandbox.rs  sandbox_setup.rs  sandbox_tests.rs  schedule.rs  shell.rs  store.rs  task_snapshot.rs  usage.rs  verifier.rs  version.rs
crates/harnesslab-cli/tests/: agent_registry_contract.rs  benchmark_contract.rs  cli_contract.rs  doctor_contract.rs  doctor_run_as_contract.rs  doctor_setup_contract.rs  event_log_integrity_contract.rs  external_runtime_error_contract.rs  external_runtime_snapshot_contract.rs  external_smoke_contract.rs  host_auth_contract.rs  init_contract.rs  replay_authority_contract.rs  replay_contract.rs  resume_contract.rs  run_output_contract.rs  runtime_report_redaction_contract.rs  swe_env_contract.rs  swe_runtime_phase_contract.rs  swe_runtime_snapshot_contract.rs  task_snapshot_contract.rs  terminal_bench_activity_grace_contract.rs  terminal_bench_cleanup_contract.rs  terminal_bench_contract.rs  terminal_bench_failure_contract.rs  terminal_bench_redaction_contract.rs  terminal_bench_run_as_contract.rs  terminal_bench_runtime_contract.rs  terminal_bench_runtime_event_contract.rs  terminal_bench_setup_failure_contract.rs  terminal_bench_watchdog_contract.rs  usage_contract.rs
crates/harnesslab-cli/tests/support/: agent_schema_docs.rs  external_runtime_assertions.rs  mod.rs  runtime_snapshot.rs  swe.rs  terminal_bench.rs
crates/harnesslab-infra/: Cargo.toml
crates/harnesslab-infra/src/: artifact.rs  docker.rs  docker_tests.rs  event.rs  file_lock.rs  lib.rs  process.rs  process_activity.rs  process_no_output.rs  process_progress.rs  process_start_gate.rs  process_tests.rs
crates/harnesslab-infra/src/docker/: compose.rs
crates/harnesslab-infra/tests/: docker_exec_env_contract.rs  process_signal_contract.rs
docs/: ProductionGoal.md  README.md  (+14 more)
(+712 files in other folders)
