[workspace]
resolver = "2"
members = [
  "crates/harnesslab-adapters",
  "crates/harnesslab-cli",
  "crates/harnesslab-core",
  "crates/harnesslab-infra",
  "crates/harnesslab-report",
  "xtask",
]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/ceasarXuu/HarnessLab"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
clap = { version = "4.5", features = ["derive"] }
predicates = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
toml = "0.9"
walkdir = "2"
libc = "0.2"
