[project]
name = "ornnlab"
version = "0.2.0"
description = "Local Harbor-powered WebUI for agent evaluation workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "harbor>=0.13,<0.14",
  "pydantic>=2.10,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.scripts]
ornnlab = "ornnlab.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "httpx>=0.28,<1.0",
  "pyright>=1.1.390,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["."]
markers = [
  "docker: requires Docker and a real Harbor execution path",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
include = ["ornnlab", "tests/python"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
venv = ".venv"
venvPath = "."

[tool.hatch.build.targets.wheel]
packages = ["ornnlab"]

[tool.hatch.build.targets.sdist]
only-include = [
  "README.md",
  "pyproject.toml",
  "ornnlab",
  "tests/python",
]
