[package]
name = "harnesslab-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "harnesslab"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
harnesslab-adapters = { path = "../harnesslab-adapters" }
harnesslab-core = { path = "../harnesslab-core" }
harnesslab-infra = { path = "../harnesslab-infra" }
harnesslab-report = { path = "../harnesslab-report" }
serde.workspace = true
serde_json.workspace = true
time.workspace = true
toml.workspace = true
walkdir.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
serde_json.workspace = true
tempfile.workspace = true
