[package]
name = "harnesslab-infra"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
harnesslab-core = { path = "../harnesslab-core" }
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
